clean up sql controllers